--- a/app/src/main/res/layout/edt_result.xml
+++ b/app/src/main/res/layout/edt_result.xml
@@ -22,12 +22,38 @@
         android:layout_weight="1"
         layout="@layout/listview" />
 
-    <Button
-        android:id="@+id/edt_newsearch_button"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@null"
-        android:text="@string/edtForm_newSearch" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/lastweek_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:text="@string/lastweek_btn" />
+
+        <Button
+            android:id="@+id/edt_newsearch_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:layout_margin="8dp"
+            android:layout_weight="3"
+            android:text="@string/edtForm_newSearch" />
+
+
+        <Button
+            android:id="@+id/nextweek_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:text="@string/nextweek_btn" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
