--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -101,7 +101,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/connect_button"
+                    android:id="@+id/btn_connect"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
@@ -115,7 +115,8 @@
                     android:text="@string/connect_button"
                     android:textColor="@color/orange"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:onClick="onConnectClicked" />
 
                 <Button
                     android:id="@+id/btn_offline"
@@ -132,7 +133,8 @@
                     android:text="@string/offline_button"
                     android:textColor="@color/orange"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:onClick="onOfflineClicked" />
             </LinearLayout>
 
             <Button
@@ -143,7 +145,8 @@
                 android:background="@null"
                 android:text="Mot de passe oublié"
                 android:textColor="@color/orange"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:onClick="onForgotPasswordClicked" />
 
         </LinearLayout>
     </ScrollView>
