--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:contentDescription="Logo ENSIIE"
+        android:contentDescription="@string/hint_logo"
         android:src="@drawable/splash_logo" />
 
 </RelativeLayout>
