--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
     <style name="IIEnsTheme" parent="android:Theme.Material.Light">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:checkboxStyle">@style/Widget.AppCompat.CompoundButton.CheckBox</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     
     <style name="MyActionBar" parent="@android:style/Widget.Material.Light.ActionBar">
