--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-
-    -->
-    <style name="IIEnsTheme" parent="android:Theme.Material.Light">
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
-        <item name="android:checkboxStyle">@style/Widget.AppCompat.CompoundButton.CheckBox</item>
+    <style name="IIEnsTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:textColor">@color/black</item>
+        <item name="android:colorPrimary">@color/orange</item>
+        <item name="android:colorPrimaryDark">@color/orange</item>
+
+        <item name="android:actionBarStyle">@style/ActionBar</item>
+        <item name="android:checkboxStyle">@style/Widget.AppCompat.CompoundButton.CheckBox</item>
     </style>
-    
-    <style name="MyActionBar" parent="@android:style/Widget.Material.Light.ActionBar">
-        <item name="android:background">@color/orange</item>
+
+    <style name="ActionBar">
+        <item name="android:colorPrimary">@color/aqua</item>
+        <item name="android:colorPrimaryDark">@color/red</item>
+        <item name="android:statusBarColor">@color/blue</item>
     </style>
 
     <style name="LoginFormContainer">
