--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/main_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -14,10 +14,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include
-            layout="@layout/toolbar"
+        <android.support.v7.widget.Toolbar
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="?attr/actionBarSize"
+            android:theme="@style/ActionBar"
+            android:elevation="4dp" />
 
         <FrameLayout
             android:id="@+id/content_container"
@@ -28,16 +32,6 @@
         <include layout="@layout/arise_webview" />
 
     </LinearLayout>
-
-    <!-- Navigation drawer -->
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navigation_drawer"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:theme="@style/Base.Theme.AppCompat"
-        app:menu="@menu/navigation_drawer"/>
 
     <!-- Bottom navigation -->
 
@@ -53,12 +47,24 @@
             android:layout_height="56dp"
             android:layout_gravity="start"
             android:layout_alignParentBottom="true"
-            android:theme="@style/Base.Theme.AppCompat"
-            app:itemBackground="@color/white"
-            app:itemIconTint="@color/black"
-            app:itemTextColor="@color/black"
+            android:theme="@style/BottomNavigation"
+            app:itemBackground="?android:attr/colorPrimaryDark"
+            app:itemIconTint="?android:attr/colorPrimary"
+            app:itemTextColor="?android:attr/textColor"
             app:menu="@menu/bottom_navigation" />
 
     </RelativeLayout>
+
+    <!-- Navigation drawer -->
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_drawer"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:theme="@style/NavigationDrawer"
+        app:itemIconTint="?android:attr/colorPrimaryDark"
+        app:menu="@menu/navigation_drawer"
+        android:elevation="4dp" />
 
 </android.support.v4.widget.DrawerLayout>
