Couleurs des icônes du bottom navigation suivant la page consultée

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:layout_alignParentBottom="true"
             android:theme="@style/BottomNavigation"
             app:itemBackground="?android:attr/colorPrimaryDark"
-            app:itemIconTint="?android:attr/colorPrimary"
+            app:itemIconTint="@drawable/selector"
             app:itemTextColor="?android:attr/textColor"
             app:menu="@menu/bottom_navigation" />
 
