--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="IIEnsTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:textColor">@color/black</item>
@@ -15,13 +14,13 @@
     </style>
 
     <style name="NavigationDrawer" parent="IIEnsTheme">
-        <item name="android:textColor">@color/red</item>
         <item name="android:colorPrimaryDark">@color/black</item>
     </style>
 
     <style name="BottomNavigation" parent="IIEnsTheme">
         <item name="android:textColor">@color/black</item>
-        <item name="android:colorPrimaryDark">@color/ltGray</item>
+        <item name="android:colorPrimaryDark">@color/white</item>
+        <item name="android:elevation">4dp</item>
     </style>
 
     <style name="LoginFormContainer">
