--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:color="@color/orange" />
-    <item android:color="@color/ltGray" />
+    <item android:state_checked="true"
+          android:color="@color/orange"
+          android:drawable="@color/orange" />
+    <item android:color="@color/ltGray"
+          android:drawable="@color/white" />
 </selector>
