--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
     </style>
 
     <style name="NavigationDrawer" parent="IIEnsTheme">
-        <item name="android:colorPrimaryDark">@color/black</item>
+        <item name="android:colorPrimaryDark">@color/ltGray</item>
     </style>
 
     <style name="BottomNavigation" parent="IIEnsTheme">
