Paramètre affichage barre de navigation basse

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,8 @@
             app:itemBackground="?android:attr/colorPrimaryDark"
             app:itemIconTint="@drawable/selector"
             app:itemTextColor="?android:attr/textColor"
-            app:menu="@menu/bottom_navigation" />
+            app:menu="@menu/bottom_navigation"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
