--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,45 +7,73 @@
     <PreferenceCategory android:title="@string/pref_notifs_txt" >
 
         <SwitchPreference
-            android:defaultValue="true"
             android:disableDependentsState="false"
             android:icon="@drawable/ic_chrome_reader_mode"
             android:key="@string/pref_news_key"
-            android:persistent="false"
-            android:summary="Affichage des "
+            android:title="@string/pref_news_title"
             android:summaryOff="@string/pref_deactivated"
             android:summaryOn="@string/pref_activated"
             android:switchTextOff="@string/pref_deactivated"
             android:switchTextOn="@string/pref_activated"
-            android:title="@string/pref_news_title"/>
+            android:persistent="true"
+            android:defaultValue="true"/>
 
         <SwitchPreference
-            android:defaultValue="false"
             android:icon="@drawable/ic_cake"
             android:key="@string/pref_anniv_key"
+            android:title="@string/pref_anniv_title"
             android:summaryOff="@string/pref_deactivated"
             android:summaryOn="@string/pref_activated"
             android:switchTextOff="@string/pref_deactivated"
             android:switchTextOn="@string/pref_activated"
-            android:title="@string/pref_anniv_title"/>
+            android:persistent="true"
+            android:defaultValue="false"/>
 
         <SwitchPreference
-            android:defaultValue="true"
             android:icon="@drawable/ic_school"
             android:key="@string/pref_events_key"
+            android:title="@string/pref_events_title"
             android:summaryOff="@string/pref_deactivated"
             android:summaryOn="@string/pref_activated"
             android:switchTextOff="@string/pref_deactivated"
             android:switchTextOn="@string/pref_activated"
-            android:title="@string/pref_events_title"/>
+            android:persistent="true"
+            android:defaultValue="true"/>
 
         <ListPreference
-            android:entries="@array/pref_partiel_entries"
-            android:entryValues="@array/pref_partiel_values"
             android:icon="@drawable/ic_warning"
             android:key="@string/pref_partiel_key"
+            android:title="@string/pref_partiel_title"
             android:summary="@string/pref_partiel_summary"
-            android:title="@string/pref_partiel_title"/>
+            android:persistent="true"
+            android:entries="@array/pref_partiel_entries"
+            android:entryValues="@array/pref_partiel_values"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/pref_fonctionnement" >
+
+        <SwitchPreference
+            android:icon="@drawable/ic_moon"
+            android:key="@string/pref_mode_nuit_key"
+            android:title="@string/pref_mode_nuit"
+            android:summaryOff="@string/pref_deactivated"
+            android:summaryOn="@string/pref_activated"
+            android:switchTextOff="@string/pref_deactivated"
+            android:switchTextOn="@string/pref_activated"
+            android:persistent="true"
+            android:defaultValue="false"/>
+
+        <SwitchPreference
+            android:icon="@drawable/ic_menu"
+            android:key="@string/pref_bottom_nav_key"
+            android:title="@string/pref_bottom_nav"
+            android:summaryOff="@string/pref_deactivated"
+            android:summaryOn="@string/pref_activated"
+            android:switchTextOff="@string/pref_deactivated"
+            android:switchTextOn="@string/pref_activated"
+            android:persistent="true"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
