--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,8 +47,10 @@
             android:layout_height="56dp"
             android:layout_gravity="start"
             android:layout_alignParentBottom="true"
+            android:animateLayoutChanges="true"
+            android:background="@color/white"
             android:theme="@style/BottomNavigation"
-            app:itemBackground="?android:attr/colorPrimaryDark"
+            app:itemBackground="@drawable/selector"
             app:itemIconTint="@drawable/selector"
             app:itemTextColor="?android:attr/textColor"
             app:menu="@menu/bottom_navigation"
